--- a/src/notebooks/Behavior Hypotheses.ipynb
+++ b/src/notebooks/Behavior Hypotheses.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "90e71762-bdec-472f-b106-390068e57585",
    "metadata": {},
    "source": [
     "# TO RUN\n",
@@ -14,7 +13,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "96d1d2f6-1456-4ca9-8e2a-a7e186fb56f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "14999ce9-6ddb-4c57-a755-2e4713e68d6f",
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +40,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dc80a227-d8d1-4d21-8974-5c4c6dc9ca87",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +50,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "471518a2-41ff-444d-87a2-8dde8538a851",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +67,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6a9703e2-5456-4127-a912-edb2d21d5397",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +83,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "55c816fb-2aa2-4f9f-b6ae-36670e8a3670",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +151,6 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "c2757e77-85db-41b9-984b-74bd76be2b87",
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +184,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "fb58ad68-fcf3-4d80-8a3f-8f85cc478ab0",
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +472,6 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "bd08a172-6f36-4c4c-bb57-537f4d05dc31",
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +509,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ab4ec790-a5d9-4879-a229-c5b13d4c4d48",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -530,7 +519,6 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "63cb21c4-68d3-46a5-9de1-e6e81c60099c",
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +540,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "87d45c46-e5b8-4100-a7c2-ff47d452c106",
    "metadata": {},
    "outputs": [
     {
@@ -574,7 +561,6 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4b051c17-f1f2-48d6-826c-651c5d641bb3",
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +598,6 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "fcb18ef6-1ba8-4ab0-a526-fee30f088fb4",
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +619,6 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f7e5d7b6-60df-4c62-ba15-4e1be7fb8461",
    "metadata": {},
    "outputs": [
     {
@@ -672,7 +656,6 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "24a05921-f140-4e79-931b-6bad5a3565f2",
    "metadata": {},
    "outputs": [
     {
@@ -703,7 +686,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56956523-ae9e-4722-b57e-c7f4a8f71a4c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -711,7 +693,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -725,7 +707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
