scatterplot is better than heatmap

--- a/src/notebooks/Coordinate-Transformation.ipynb
+++ b/src/notebooks/Coordinate-Transformation.ipynb
@@ -1943,7 +1943,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 162,
    "id": "9d18769a-affa-471e-92ec-43598e05c229",
    "metadata": {},
    "outputs": [
@@ -1951,6 +1951,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/office/AV/DataSetExploration/TTI-dataset-tools/src/tti_dataset_tools/InfluenceAnalyzer.py:117: RuntimeWarning: divide by zero encountered in log\n",
+      "  grid[i+w // 2, j] for i, j in product(X, Y)\n",
       "/home/office/AV/DataSetExploration/TTI-dataset-tools/src/tti_dataset_tools/InfluenceAnalyzer.py:130: FutureWarning: In a future version of pandas all arguments of DataFrame.pivot will be keyword-only.\n"
      ]
     }
@@ -1961,7 +1963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 163,
    "id": "ecbb759e-05d1-4b59-9393-282514fa48dd",
    "metadata": {},
    "outputs": [],
@@ -1981,7 +1983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 164,
    "id": "efac4c84-82ca-4a5f-a354-ae42328dc7f4",
    "metadata": {},
    "outputs": [
