scene data collection

--- a/src/notebooks/crosswalk-model.ipynb
+++ b/src/notebooks/crosswalk-model.ipynb
@@ -739,6 +739,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "polygon = crosswalkModel.generatePolygonFromBreakpointVals(breakpointXVals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<svg xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" width=\"100.0\" height=\"100.0\" viewBox=\"-1.7670602728788543 0.8 5.264505911946164 5.4\" preserveAspectRatio=\"xMinYMin meet\"><g transform=\"matrix(1,0,0,-1,0,7.0)\"><path fill-rule=\"evenodd\" fill=\"#66cc99\" stroke=\"#555555\" stroke-width=\"0.10800000000000001\" opacity=\"0.6\" d=\"M -0.24914483282294797,1.0 L -0.44553048296985565,2.0 L -0.618297513226332,3.0 L -0.9640060071541467,4.0 L -0.7300893871641791,5.0 L -1.5670602728788543,6.0 L 3.297445639067309,6.0 L 3.041783303820605,5.0 L 2.644990035374473,4.0 L 2.3036332176250442,3.0 L 1.5407663707362278,2.0 L 0.6433014655263416,1.0 L -0.24914483282294797,1.0 z\" /></g></svg>"
+      ],
+      "text/plain": [
+       "<shapely.geometry.polygon.Polygon at 0x7f62eca05c10>"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "polygon"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
