--- a/src/notebooks/Behavior Hypotheses.ipynb
+++ b/src/notebooks/Behavior Hypotheses.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5938c9ac",
    "metadata": {},
    "source": [
     "# TO RUN\n",
@@ -13,6 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "8b7ac414",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "23111cc6",
    "metadata": {},
    "outputs": [
     {
@@ -40,6 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "f5aa6f43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,6 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "952b1eb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,6 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "df2e5c35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,6 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "87de40f3",
    "metadata": {},
    "outputs": [
     {
@@ -151,6 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "4b699a32",
    "metadata": {},
    "outputs": [
     {
@@ -184,6 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
+   "id": "76045970",
    "metadata": {},
    "outputs": [
     {
@@ -472,6 +481,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "8b8cd1d3",
    "metadata": {},
    "outputs": [
     {
@@ -509,6 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "2ae2048c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,6 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
+   "id": "114e2c8d",
    "metadata": {},
    "outputs": [
     {
@@ -540,6 +552,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
+   "id": "b6b572f3",
    "metadata": {},
    "outputs": [
     {
@@ -561,6 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
+   "id": "3d345bce",
    "metadata": {},
    "outputs": [
     {
@@ -598,6 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
+   "id": "877e964d",
    "metadata": {},
    "outputs": [
     {
@@ -619,6 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
+   "id": "6591ff34",
    "metadata": {},
    "outputs": [
     {
@@ -656,6 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
+   "id": "93cbb7e3",
    "metadata": {},
    "outputs": [
     {
@@ -686,6 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "a2d5a75f",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -693,7 +711,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -707,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
