--- a/src/notebooks/crosswalk-ped.ipynb
+++ b/src/notebooks/crosswalk-ped.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "fd38abc4-d0ce-4554-8984-75c98fe69291",
    "metadata": {},
    "outputs": [],
@@ -62,6 +62,8 @@
     "import os\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "sns.set_theme()\n",
     "\n",
     "from tti_dataset_tools.TrajectoryTransformer import TrajectoryTransformer\n",
     "from tti_dataset_tools.TrajectoryVisualizer import TrajectoryVisualizer\n",
@@ -613,13 +615,13 @@
     {
      "data": {
       "text/plain": [
-       "{'whiskers': [<matplotlib.lines.Line2D at 0x21e149c9280>,\n",
-       "  <matplotlib.lines.Line2D at 0x21e149c9520>],\n",
-       " 'caps': [<matplotlib.lines.Line2D at 0x21e149c97c0>,\n",
-       "  <matplotlib.lines.Line2D at 0x21e149c9a60>],\n",
-       " 'boxes': [<matplotlib.lines.Line2D at 0x21e149d9fa0>],\n",
-       " 'medians': [<matplotlib.lines.Line2D at 0x21e149c9d00>],\n",
-       " 'fliers': [<matplotlib.lines.Line2D at 0x21e149c9fa0>],\n",
+       "{'whiskers': [<matplotlib.lines.Line2D at 0x21617ac5c40>,\n",
+       "  <matplotlib.lines.Line2D at 0x21617acef40>],\n",
+       " 'caps': [<matplotlib.lines.Line2D at 0x21617acea60>,\n",
+       "  <matplotlib.lines.Line2D at 0x21617ace1c0>],\n",
+       " 'boxes': [<matplotlib.lines.Line2D at 0x21617ac5e20>],\n",
+       " 'medians': [<matplotlib.lines.Line2D at 0x21617acebe0>],\n",
+       " 'fliers': [<matplotlib.lines.Line2D at 0x21617acefd0>],\n",
        " 'means': []}"
       ]
      },
@@ -650,13 +652,6 @@
    "id": "00ef2d60-2000-45a4-b75e-66843ba22d1e",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "using range (0.0, 3.5)\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -847,7 +842,8 @@
     }
    ],
    "source": [
-    "\n",
+    "base = pyplot.gca().transData\n",
+    "rot = transforms.Affine2D().rotate_deg(90)\n",
     "visualizer.show(pedDf, idCol = 'trackId', xCol = 'mapX', yCol = 'mapY', colorCol='speed')"
    ]
   },
